--- a/README
+++ b/README
@@ -1,28 +1,39 @@
-PrimePicks
-PrimePicks is an e-commerce application designed to offer a seamless shopping experience. Developed using Spring Boot, this application integrates various Spring modules to deliver a robust, secure, and efficient platform. Below, you'll find details on the project's setup, architecture, and functionality.
+PrimePicks is a sophisticated e-commerce application developed using Spring Boot, offering a secure and efficient platform for online shopping. This application leverages various Spring modules to ensure robust performance, security, and ease of use.
 
 Table of Contents
 Features
 Technologies Used
+Architecture
 Installation
 Configuration
 Usage
 User Roles
+Database Schema
 Contributing
 License
 Features
-User Authentication and Authorization: Secure login and role-based access control using Spring Security.
-Database Management: Efficient database operations powered by Spring Data JPA and Hibernate ORM.
+Secure Authentication and Authorization: Ensured by Spring Security, providing role-based access control.
+Efficient Data Management: Using Spring Data JPA and Hibernate for database operations.
 MVC Architecture: Clean separation of concerns with Spring MVC.
-Dynamic UI: Simple and responsive user interface built with Thymeleaf.
-Role-Based Functionality: Different user roles (USER, ADMIN, SALES_MANAGER) with specific permissions and views.
+Dynamic and Responsive UI: Developed with Thymeleaf for a smooth user experience.
+Role-Based Functionality: Different roles (USER, ADMIN, SALES_MANAGER) with specific permissions and views.
 Technologies Used
-Spring Boot: Core framework for building the application.
-Spring Security: Provides authentication and authorization features.
-Spring Data JPA: Simplifies database operations.
-Hibernate: ORM library for database interactions.
-Spring MVC: Facilitates the development of the web layer.
-Thymeleaf: Template engine for creating dynamic web pages.
+Spring Boot: Framework for building the core application.
+Spring Security: Handles authentication and authorization.
+Spring Data JPA: Simplifies data access layers.
+Hibernate: ORM framework for database interactions.
+Spring MVC: Facilitates the web layer development.
+Thymeleaf: Template engine for dynamic web pages.
+MySQL: Database used for storing application data.
+Architecture
+PrimePicks follows a layered architecture:
+
+Presentation Layer: Handled by Spring MVC and Thymeleaf.
+Business Logic Layer: Implemented using Spring Services.
+Data Access Layer: Managed by Spring Data JPA and Hibernate.
+Security Layer: Ensured by Spring Security.
+ (Include a diagram if available)
+
 Installation
 To set up the project locally, follow these steps:
 
@@ -32,6 +43,9 @@ bash
 Копировать код
 git clone https://github.com/yourusername/primepicks.git
 cd primepicks
+Configure Database:
+Ensure you have a MySQL database running and update the application.properties file with your database credentials.
+
 Build the Project:
 
 bash
@@ -43,32 +57,32 @@ bash
 Копировать код
 ./mvnw spring-boot:run
 Configuration
-The application can be configured via the application.properties file located in the src/main/resources directory. Key configurations include:
-
-Database Connection:
+Database Configuration
+Update src/main/resources/application.properties with your database connection details:
 
 properties
 Копировать код
 spring.datasource.url=jdbc:mysql://localhost:3306/primepicks
 spring.datasource.username=root
 spring.datasource.password=yourpassword
-Spring Security:
-Customize security settings as needed in the SecurityConfig class.
+Security Configuration
+Customize security settings in src/main/java/com/primepicks/config/SecurityConfig.java.
 
 Usage
-Once the application is running, you can access it via http://localhost:8080. Depending on your role, you'll have access to different parts of the application:
+Access the application via http://localhost:8080. Depending on your user role, you will have access to different features:
 
-ROLE_USER: Standard user functionalities like browsing products, adding to cart, and making purchases.
-ROLE_ADMIN: Admin functionalities like managing products, viewing user activities, and administrative tasks.
-ROLE_SALES_MANAGER: Sales management functionalities including overseeing sales data and managing customer relationships.
+ROLE_USER: Browse products, add to cart, and make purchases.
+ROLE_ADMIN: Manage products, user activities, and perform administrative tasks.
+ROLE_SALES_MANAGER: Oversee sales data and manage customer relationships.
 User Roles
-The application supports three types of users with specific roles:
+ROLE_USER: Standard user with shopping capabilities.
+ROLE_ADMIN: Administrator with full access to the system.
+ROLE_SALES_MANAGER: Sales manager with access to sales-related features.
+Database Schema
+(Include a detailed description or a diagram of your database schema)
 
-ROLE_USER: Basic users who can browse and purchase products.
-ROLE_ADMIN: Administrators who manage the platform and have the highest level of access.
-ROLE_SALES_MANAGER: Users who manage sales operations and customer interactions.
 Contributing
-Contributions are welcome! If you find any issues or have suggestions for improvements, please open an issue or submit a pull request.
+We welcome contributions! Follow these steps to contribute:
 
 Fork the Repository
 Create a Feature Branch:
@@ -86,11 +100,3 @@ git push origin feature/YourFeature
 Open a Pull Request
 License
 This project is licensed under the MIT License. See the LICENSE file for details.
-
-Thank you for using PrimePicks! We hope this application meets your e-commerce needs. For further assistance, please contact our support team.
-
-
-
-
-
-
